--- a/health.html
+++ b/health.html
@@ -57,7 +57,7 @@
             <h2>📸 Media Gallery 📸</h2>
             <p>Explore images and videos showcasing health tech innovations.</p>
             <figure>
-                <img src="ai_surgery.jpg" alt="AI Surgery" width="300">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRticNFnxAiE1jiPRvEqZRy_gi3Ny-6jkVb3g&sai_surgery.jpg" alt="AI Surgery" width="300">
                 <figcaption>AI-assisted robotic surgery in action</figcaption>
             </figure>
             <figure>
