--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@
                     <circle cx="16.5" cy="16.5" r="1.5" stroke="#5f2eea" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M8 11V7C8 5.89543 8.89543 5 10 5H14C15.1046 5 16 5.89543 16 7V11" stroke="#5f2eea" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
-                Robotics
+                <a href="health.html">Robotics</a>
             </div>
         </div>
         
